--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="sixDp">6dp</dimen>
+    <dimen name="eightDp">8dp</dimen>
+    <dimen name="tenDp">10dp</dimen>
+    <dimen name="twelveDp">12dp</dimen>
+    <dimen name="sixteenDP">16dp</dimen>
+    <dimen name="twentyFourDp">24dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
