添加主题换肤

--- a/app/src/main/res/layout/pp_bar_main.xml
+++ b/app/src/main/res/layout/pp_bar_main.xml
@@ -4,19 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/mainBackground"
     android:fitsSystemWindows="true"
     tools:context=".ui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#33000000"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
@@ -26,6 +28,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/mainBackground"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.allyn.lives.bottontab.BottomNavigationBar
@@ -37,12 +40,4 @@
 
     </com.allyn.lives.bottontab.BottomNavigationBar>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"
-        android:visibility="gone" />
 </android.support.design.widget.CoordinatorLayout>
