--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,19 +5,19 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@mipmap/ic_launcher"
-            android:title="Import" />
+            android:title="音乐" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@mipmap/ic_launcher"
-            android:title="Gallery" />
+            android:title="天气" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@mipmap/ic_launcher"
-            android:title="Slideshow" />
+            android:title="TV" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@mipmap/ic_launcher"
-            android:title="Tools" />
+            android:title="翻译" />
     </group>
 
     <item android:title="Communicate">
@@ -25,11 +25,11 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@mipmap/ic_launcher"
-                android:title="Share" />
+                android:title="换肤" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@mipmap/ic_launcher"
-                android:title="Send" />
+                android:title="设置" />
         </menu>
     </item>
 
