--- a/app/src/main/res/layout/menu_main_head.xml
+++ b/app/src/main/res/layout/menu_main_head.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <ImageView
@@ -10,14 +10,14 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="20dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/allyn" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Title"
+        android:text="Allyn"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -25,6 +25,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Title"
+        android:text="https://github.com/Allyns"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 </LinearLayout>
