--- a/app/src/main/res/layout/pp_bar_main.xml
+++ b/app/src/main/res/layout/pp_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="?attr/mainBackground"
     android:fitsSystemWindows="true"
-    tools:context=".ui.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
