--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,19 +4,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_music_selected"
             android:title="音乐" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_history_white_48dp"
             android:title="天气" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_movie_default"
             android:title="TV" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_book_selected"
             android:title="翻译" />
     </group>
 
@@ -28,7 +28,7 @@
                 android:title="换肤" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@mipmap/ic_launcher"
+                android:icon="@drawable/ic_settings_white"
                 android:title="设置" />
         </menu>
     </item>
