--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,45 @@
     <dimen name="twentyFourDp">24dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="actionbar_height">48dp</dimen>
-    <color name="colorPrimaryLight">#C8E6C9</color>
 
+    <dimen name="font_larger">22sp</dimen>
+    <dimen name="font_large">18sp</dimen>
+    <dimen name="font_twenty">20sp</dimen>
+    <dimen name="font_nineteen">19sp</dimen>
+    <dimen name="font_big">15sp</dimen>
+    <dimen name="font_small">13sp</dimen>
+    <dimen name="font_smaller">12sp</dimen>
+    <dimen name="font_tiny">10sp</dimen>
+
+    <dimen name="spacing_large">24dp</dimen>
+    <dimen name="spacing_normal">14dp</dimen>
+    <dimen name="spacing_thirteen">13dp</dimen>
+    <dimen name="spacing_small">10dp</dimen>
+    <dimen name="spacing_smaller">6dp</dimen>
+    <dimen name="spacing_tiny">4dp</dimen>
+    <dimen name="spacing_margin">16dp</dimen>
+    <dimen name="spacing_twenty">20dp</dimen>
+
+    <dimen name="search_icon_padding">12dp</dimen>
+    <dimen name="search_view_text_padding">65dp</dimen>
+    <dimen name="btn_height_normal">47dp</dimen>
+
+    <dimen name="font_normal">16sp</dimen>
+
+    <dimen name="detail_app_bar_height">146dp</dimen>
+    <dimen name="detail_title_margin">8dp</dimen>
+
+    <dimen name="settings_cell_height">54dp</dimen>
+    <dimen name="list_view_padding_negative">-16dp</dimen>
+
+    <dimen name="card_height_margin">8dp</dimen>
+    <dimen name="card_height_marginTop">4dp</dimen>
+    <dimen name="card_height_radius">4dp</dimen>
+    <dimen name="card_height_elevation">2dp</dimen>
+
+    <dimen name="height_five">5dp</dimen>
+
+    <dimen name="btn_download_width">56dp</dimen>
+    <dimen name="btn_download_height">27dp</dimen>
+    <dimen name="btn_download_size">12dp</dimen>
 </resources>
