--- a/app/src/main/res/layout/item_local_music.xml
+++ b/app/src/main/res/layout/item_local_music.xml
@@ -10,19 +10,20 @@
     app:cardElevation="2dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/local_music_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="33dp"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="20dp"
+            android:layout_alignTop="@+id/local_music_img"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/local_music_img"
+            android:layout_toRightOf="@+id/local_music_img"
+            android:singleLine="true"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -37,6 +38,17 @@
             android:layout_marginTop="19dp"
             android:text="New Text"
             android:textAppearance="?android:textAppearanceSmall" />
+
+        <ImageView
+            android:id="@+id/local_music_img"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:visibility="gone"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp" />
 
     </RelativeLayout>
 
