--- a/app/src/main/res/layout/fragment_translation.xml
+++ b/app/src/main/res/layout/fragment_translation.xml
@@ -8,19 +8,39 @@
     <EditText
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:paddingBottom="100dp" />
 
     <Button
         android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Button" />
+        android:text="翻译" />
+
+    <Button
+        android:id="@+id/newactivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="newstart"
+        android:text="详情" />
 
     <TextView
         android:id="@+id/msg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="New Text" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="30dp"
+        android:text="翻译结果" />
+
+    <TextView
+        android:id="@+id/web_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
 
 </LinearLayout>
