--- a/app/src/main/res/drawable/bg_round_rectangle_text_bg.xml
+++ b/app/src/main/res/drawable/bg_round_rectangle_text_bg.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/white_e" />
             <corners android:radius="8dp" />
         </shape>
     </item>
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/white_e" />
 
             <corners android:radius="8dp" />
         </shape>
@@ -17,7 +17,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#ffffff" />
             <corners android:radius="8dp" />
-            <stroke android:width="1dp" android:color="@color/colorPrimary" />
+            <stroke android:width="1dp" android:color="@color/white_e" />
         </shape>
     </item>
 </selector>
