--- a/app/src/main/res/layout/item_image_classify_tip.xml
+++ b/app/src/main/res/layout/item_image_classify_tip.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_action"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="50dp"
+    android:foreground="?selectableItemBackground"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="4dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnClassifyMore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/more" />
+        <TextView
+            android:id="@+id/tvClassifyName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="63dp"
+            android:layout_marginStart="63dp"
+            android:text="分类名称"
+            android:textAppearance="?android:attr/textAppearanceMediumInverse"
+            android:textColor="@color/colorPrimary" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvClassifyName"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
-        android:layout_alignBottom="@+id/btnClassifyMore"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_toLeftOf="@+id/btnClassifyMore"
-        android:layout_toStartOf="@+id/btnClassifyMore"
-        android:text="分类名称"
-        android:textAppearance="?android:attr/textAppearanceMediumInverse"
-        android:textColor="@color/colorPrimary" />
-</RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/white_e" />
+</android.support.v7.widget.CardView>
