--- a/app/src/main/res/layout/item_image_classify_tip.xml
+++ b/app/src/main/res/layout/item_image_classify_tip.xml
@@ -1,34 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_action"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:foreground="?selectableItemBackground"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="4dp">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
 
         <TextView
             android:id="@+id/tvClassifyName"
-            android:layout_width="match_parent"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btnMore"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="63dp"
-            android:layout_marginStart="63dp"
+            android:layout_marginLeft="51dp"
+            android:layout_marginStart="51dp"
             android:text="分类名称"
             android:textAppearance="?android:attr/textAppearanceMediumInverse"
             android:textColor="@color/colorPrimary" />
-    </LinearLayout>
 
-    <View
+        <Button
+            android:id="@+id/btnMore"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="28dp"
+            android:layout_marginRight="28dp"
+            android:background="@drawable/bg_round_rectangle_text_bg"
+            android:text="@string/more" />
+    </RelativeLayout>
+
+    <com.jude.easyrecyclerview.EasyRecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/white_e" />
-</android.support.v7.widget.CardView>
+        android:layout_height="200dp">
+
+    </com.jude.easyrecyclerview.EasyRecyclerView>
+
+</LinearLayout>
