--- a/app/src/main/res/layout/item_image_classify_content.xml
+++ b/app/src/main/res/layout/item_image_classify_content.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/card_action"
         android:clickable="true"
         android:foreground="?selectableItemBackground"
         app:cardCornerRadius="2dp"
@@ -19,16 +20,17 @@
 
             <ImageView
                 android:id="@+id/ivClassify"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:src="@drawable/ic_nonetwork" />
 
             <TextView
                 android:id="@+id/tvTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
+                android:layout_margin="15dp"
                 android:text="Title"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18dp" />
