--- a/app/src/main/res/layout/item_image_classify_tip.xml
+++ b/app/src/main/res/layout/item_image_classify_tip.xml
@@ -16,29 +16,29 @@
             android:id="@+id/tvClassifyName"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:text="分类名称"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/colorPrimary"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textColor="@color/colorPrimary" />
 
         <Button
             android:id="@+id/btnMore"
             android:layout_width="60dp"
             android:layout_height="30dp"
-            android:background="@drawable/bg_round_rectangle_text_bg"
-            android:text="@string/more"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentTop="true"
+            android:background="@drawable/bg_round_rectangle_text_bg"
+            android:text="@string/more" />
     </RelativeLayout>
 
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         android:overScrollMode="never"
         android:scrollbars="none">
 
