图书分类完成，修改报名类型

--- a/app/src/main/res/layout/tv_fragment_main.xml
+++ b/app/src/main/res/layout/tv_fragment_main.xml
@@ -6,7 +6,7 @@
 
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvHtml"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Main"
