--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -3,5 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/recycler"
-    tools:context=".fragment.image.ImageClassifyFragment">
+    tools:context=".fragment.books.BooksClassifyFragment">
 </com.jude.easyrecyclerview.EasyRecyclerView>
