--- a/app/src/main/res/layout/item_books_classify_content.xml
+++ b/app/src/main/res/layout/item_books_classify_content.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="8dp"
-    android:background="?selectableItemBackground"
+    android:foreground="?selectableItemBackground"
     android:clickable="true"
     app:cardCornerRadius="2dp"
     app:cardElevation="4dp">
