--- a/app/src/main/res/layout/fragment__img_tab.xml
+++ b/app/src/main/res/layout/fragment__img_tab.xml
@@ -5,17 +5,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionbar_height"
         android:background="@color/colorPrimary"
-        app:tabTextAppearance="@style/TextAppearance.AppCompat.Subhead"
-        app:tabTextColor="@color/colorPrimaryLight"
-        app:tabSelectedTextColor="@android:color/white"
+        android:fillViewport="false"
         app:tabIndicatorColor="@android:color/white"
         app:tabMode="scrollable"
-        android:fillViewport="false"  />
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextAppearance="@style/TextAppearance.AppCompat.Subhead"
+        app:tabTextColor="@color/colorPrimaryLight" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
