--- a/app/src/main/res/layout/item_details_title.xml
+++ b/app/src/main/res/layout/item_details_title.xml
@@ -27,14 +27,12 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="10dp"
-            android:layout_toEndOf="@+id/tvTitleSize"
-            android:layout_toRightOf="@+id/tvTitleSize"
             android:singleLine="true"
             android:text="这是章节的标题了啦"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_toRightOf="@+id/tvTitleSize"
+            android:layout_toEndOf="@+id/tvTitleSize" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
