--- a/app/src/main/res/layout/myview_dialog.xml
+++ b/app/src/main/res/layout/myview_dialog.xml
@@ -14,10 +14,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:textSize="@dimen/font_sixteen"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:text="Medium Text" />
+            android:text="title" />
 
         <View
             android:layout_width="match_parent"
@@ -34,6 +35,7 @@
             android:id="@+id/tvContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textSize="@dimen/font_large"
             android:layout_margin="10dp" />
     </ScrollView>
 </LinearLayout>
