--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="font_twenty">20sp</dimen>
     <dimen name="font_nineteen">19sp</dimen>
     <dimen name="font_big">15sp</dimen>
+    <dimen name="font_sixteen">16sp</dimen>
     <dimen name="font_small">13sp</dimen>
     <dimen name="font_smaller">12sp</dimen>
     <dimen name="font_tiny">10sp</dimen>
