解决启动时白屏的问题

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowIsTranslucent">true</item>
         <item name="mainBackground">#fff</item>
         <item name="titleColor">#000</item>
         <item name="commonTextColor">#454545</item>
@@ -30,6 +31,7 @@
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
+        <item name="android:windowIsTranslucent">true</item>
         <item name="windowNoTitle">true</item>
     </style>
 
